start code generator